# trading

./: .env.example  .gitignore  README.md  eslint.config.mjs  next.config.ts  package-lock.json  package.json  playwright.config.ts  tsconfig.json
.claude/: settings.local.json
Specs/: specifications.md
app/: globals.css  layout.tsx  page.tsx
app/api/journal/dashboard/: route.ts
app/journal/: layout.tsx  page.tsx
app/trading/: layout.tsx  page.tsx
components/: query-provider.tsx
components/ui/: badge.tsx  button.tsx  dialog.tsx  index.ts  select.tsx
data-sourcing/: .env.example  README.md  pyproject.toml
data-sourcing/config/: holidays.yaml
data-sourcing/scripts/: backfill.py  daily_sync.py  init_journal_db.py  seed_journal_data.py  setup_database.py
data-sourcing/src/: __init__.py
data-sourcing/src/cli/: main.py
data-sourcing/src/config/: __init__.py  settings.py
data-sourcing/src/data_sources/: __init__.py  tiingo.py
data-sourcing/src/database/: __init__.py  connection.py  journal_repository.py  journal_schema.py  repository.py  schema.py
data-sourcing/src/services/: __init__.py  sync.py
data-sourcing/src/utils/: __init__.py  dates.py
data-sourcing/tests/: __init__.py  test_database.py
lib/utils/: cn.ts
modules/trading/: index.ts
modules/trading/actions/: index.ts
modules/trading/components/: index.ts  security-search.tsx  stock-chart.tsx  watchlist-table.tsx
modules/trading/hooks/: index.ts  journal-hooks.ts
modules/trading/lib/: database.ts  journal-repository.ts  repository.ts
modules/trading/types/: index.ts
tests/: home.spec.ts
(+20 files in other folders)
